wallet_core/error_category/error_category_derive/tests/derive_error_category/fail_on_invalid_defer_1.stderr
error[E0277]: the trait bound `std::io::Error: ErrorCategory` is not satisfied
 --> tests/derive_error_category/fail_on_invalid_defer_1.rs:3:10
  |
3 | #[derive(ErrorCategory)]
  |          ^^^^^^^^^^^^^ the trait `ErrorCategory` is not implemented for `std::io::Error`
  |
  = help: the trait `ErrorCategory` is implemented for `Error`
  = note: this error originates in the derive macro `ErrorCategory` (in Nightly builds, run with -Z macro-backtrace for more info)
