wallet_core/error_category/error_category_derive/tests/derive_error_category/fail_on_invalid_defer_1.rs
use error_category::ErrorCategory;

#[derive(ErrorCategory)]
enum Error {
    #[category(defer)]
    MyError(#[defer] std::io::Error),
}

fn main() {}
